src/style/_gallery.scss
.no-scroll {
	overflow: hidden;
}

.overlay {
    height: 100%;
    width: 100%;
    opacity: 0;
    position: fixed; 
    z-index: 1;
    left: 0;
    top: 0;
    background-color: rgb(0,0,0); 
    background-color: rgba(0,0,0, 0.5); 
    overflow-x: hidden; 
    transition: .4s;
    display: none;
    align-items: center;
    justify-content: center;

    &__close {
    	position: absolute;
	    top: -55px;
	    right: -55px;
	    background: 50% 50% url('/static/close.svg') no-repeat;
    }
}

.popup-control {
	width: 18px;
    height: 18px;
    padding: 26px;
    border-radius: 50%;
    cursor: pointer;
    border: none;
    user-select: none;
    outline: none;

	&:hover,
	&:active,
	&:focus {
		background-color: rgba(0, 0, 0, .5);
		transition: .4s;
	}
}

.slider {
	display: none;
	min-height: 520px;
	max-width: 820px;
	max-height: 520px;
	overflow: visible;
	position: relative;

	&--stories {
		background: transparent;
		.slides {
			background: transparent;
		}
		.slides__sidebar,
		.slide__text--bottom {
			display: none;
		}
	}

	&__forward,
	&__backward {
		position: absolute;
		top: 50%;
		border-radius: 50%;
		display: block;
	}

	&__backward {
		right: 100%;
		background: 50% 50% url('/static/back.svg') no-repeat;
		transform: translate(-10px, -50%);
	}

	&__forward {
		left: 100%;
		background: 50% 50% url('/static/forward.svg') no-repeat;
		transform: translate(10px, -50%);
	}
}

.slides {
	display: flex;
	background: #fff;
	max-height: inherit;
}

.slides__sidebar {
	width: 300px;
	height: inherit;
	background: #fff;
	overflow: auto;
}

.slides__viewport {
	width: 520px;
	height: 520px;
	max-height: 520px;
	overflow: hidden;
	margin: 0 auto;
	position: relative;
}

.slide {
	position: absolute;
	top: 0;
	left: 0;
	opacity: 0;
	transition: opacity .4s ease;

	&--open {
		opacity: 1;
		transition: opacity .7s ease-in;
	}
}

.slider__header,
.slide__text--bottom {
	display: none;
	background: #fff;
}

.slide__text--bottom {
	padding-top: 30px;
}

.slide__text {
	color: #000;
	padding-bottom: 10px;

	.section__text {
		font-size: 13px;
	}

	.section__header {
		font-size: 16px;
		margin-bottom: 13px;
	}

	.section {
		display: none;

		&--show {
			display: block;
			margin-bottom: 0px;
		}
	}
}

.slideshow {
	.overlay {
		opacity: 1;
		display: flex;
	}

	.slider {
		display: block;
	}
}

.slide,
.slide__video,
.slide__img {
	max-width: 520px;
	max-height: 520px;
}

.slide__video {
	display: block;
	margin: 0 auto;
}

@media screen and (max-height: 520px) {
	.overlay {
		align-items: flex-start;
	}
}

@media screen and (max-width: 960px) {
	.slider {
		margin-top: 80px;
		max-height: 520px;

		&__forward,
		&__backward {
			display: none;
		}
	}
	
	.overlay__close {
		right: 0	;
	}
}

@media screen and (max-width: 820px) {

	.slider {
		max-width: 675px;
		min-width: 675px;
		max-height: 375px;
		min-height: 375px;
	}

	.slides__viewport {
		max-width: 375px;
		max-height: 375px;
		width: 375px;
		height: 375px;
	}
	
	.slide,
	.slide__video,
	.slide__img {
		max-width: 375px;
		max-height: 375px;
	}
}

@media screen and (max-width: 675px) {
	.overlay {
		align-items: flex-start;
		position: static;
	}

	.no-scroll {
		overflow: visible;
	}

	.slider {
		margin-top: 0;
		min-width: 375px;
		max-width: 375px;
		max-height: fit-content;
	}

	.slides__sidebar {
		display: none
	}

	.slider__header,
	.slide__text--bottom {
		display: block;
	}

	.slideshow .main__content {
		display: none;
	}
	.overlay__close {
		display: none;
	}
}

